# P2G_OriginalFW

./: ReleaseNotes.txt
Documentation/FW_API/: Documentation.html
Documentation/FW_API/html/: _introduction_8dox.html  annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group___a_d_c_x_m_c_configuration.html  group___a_d_c_x_m_c_configuration.js  group___calibration.html  group___calibration.js  group___data_acquisition.html  group___data_acquisition.js  group___device_info.html  group___device_info.js  group___doppler_configuration.html  group___doppler_configuration.js  group___driver_information.html  group___driver_information.js  group___error_codes.html  group___error_codes.js  group___f_m_c_w_configuration.html  group___f_m_c_w_configuration.js  group___frame_configuration.html  group___open_close.js  (+33 more)
Firmware_Software/: ReadMe.txt
Firmware_Software/Binary/: P2G_FMCW.hex  P2G_FW.hex  ReadMe.txt
Firmware_Software/Communication Library/ComLib_C_Interface/: CMakeLists.txt  extract_raw_data.c
Firmware_Software/Communication Library/ComLib_C_Interface/include/: EndpointTestData.h  ProcessDataHelper.c  ProcessDataHelper.h  Protocol.h
Firmware_Software/Communication Library/ComLib_C_Interface/src/: EndpointTestData.c  Protocol.c  Protocol_KnownEndpoints.h
Firmware_Software/DAVE project/: ReadMe.txt
Hardware/: ReadMe.txt
Hardware/Production data/: P2G_BOM_V1.2.xlsx  P2G_Pick_&_Place_V1.2.txt
(+305 files in other folders)
